--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,15 @@ dependencies:
   animated_snack_bar: ^0.4.0
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
   dio: ^5.9.0
   easy_localization: ^3.0.8
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.2.3
+  get_it: ^9.2.0
   go_router: ^17.0.0
   image_picker: ^1.2.1
   pretty_dio_logger: ^1.4.0
