--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get_it: ^9.2.0
   go_router: ^17.0.0
   image_picker: ^1.2.1
+  lottie: ^3.3.2
   pretty_dio_logger: ^1.4.0
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
@@ -66,6 +67,7 @@ flutter:
     - assets/images/
     - assets/translations/
     - assets/logos/
+    - assets/lottie/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
